<resources>
    <string name="app_name">Sensors</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Acc">Accelerometer</string>
    <string name="Prox">Proximity</string>
    <string name="Lig">Light sensor</string>
    <string name="Sou">Sound</string>
    <string name="Visual">Visual</string>
    <string name="proximity">Proximity</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
</resources>
