<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="350dp"
        android:id="@+id/graph_holder"></LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:text="@string/Stop"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Visual"
        android:id="@+id/visual"
        android:layout_gravity="center_horizontal" />

</LinearLayout>