<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:id="@+id/imageButton"
        android:layout_marginTop="118dp"
        android:contentDescription="@string/Acc"
        android:src="@drawable/acc"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="155dp"
        android:layout_height="140dp"
        android:id="@+id/imageButton2"
        android:contentDescription="@string/Prox"
        android:src="@drawable/soclose1"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/imageButton" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageButton3"
        android:contentDescription="@string/Sou"
        android:src="@drawable/sound1"
        android:layout_below="@+id/imageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />
</RelativeLayout>
